<resources>
    <string name="app_name"> Account Keeper</string>
    <string name="title_activity_add_account">Add Account</string>
    <string name="title_activity_edit_account">Edit Account</string>
    <string name="title_activity_inter_account_transfer">Inter Account Transfer</string>
    <string name="edit_button">Edit</string>
    <string name="transfer_button">Transfer</string>
    <string name="title_activity_add_transaction">Add Transaction</string>
    <string name="title_home">Home</string>
    <string name="add_account">Add Account</string>
    <string name="share_this_app">Share this App</string>
    <string name="exit">Exit</string>
    <string name="title_list_transactions">Transactions</string>
    <string name="transfer">Transfer</string>
    <string name="journal_entry_string">Journal Entry (Ex. Purchase Bananas)</string>
    <string name="transact">Transact</string>
    <string name="expense">Expense</string>
    <string name="income">Income</string>
    <string name="textview">TextView</string>
    <string name="accounts">Accounts</string>
    <string name="amount_ex_12_0">Amount (Ex: 12.0)</string>
    <string name="no_accounts_text">There are no account to be displayed.</string>
    <string name="update">Update</string>
    <string name="name">Name</string>
    <string name="description">Description</string>
    <string name="amount_ex_100_0">Amount (Ex: 100.0)</string>
    <string name="add">Add</string>
    <string name="name_ex_paytm">Name (Ex: Paytm)</string>
    <string name="description_ex_paytm_payments_bank">Description (Ex: Paytm Payments Bank)</string>
    <string name="initial_amount_ex_266_0">Initial Amount (Ex: 266.0)</string>
    <string name="Balance">Balance</string>
    <string name="today_s_expenditure">Today\'s Expenditure</string>
    <string name="today_s_income">Today\'s Income</string>
    <string name="title_activity_settings">Settings</string>
    <string name="backup">Backup</string>
    <string name="restore">Restore</string>
    <string name="developer">Sushant Kumar Gupta</string>

    <!-- Preference Titles -->

    <!-- Messages Preferences -->

    <!-- Sync Preferences -->
    <string name="start_date">Start Date</string>
    <string name="end_date">End Date</string>
    <string name="apply">Apply</string>
    <string name="to_expense_account">To Expense Account</string>
    <string name="from_income_account">From Income Account</string>
    <string name="enter_a_6_digit_pin">Enter 6 digit PIN</string>
    <string name="todo">TODO</string>
    <string name="account_description">Account Description</string>
    <string name="account_name">Account Name</string>
    <string name="mit_license">MIT License</string>
    <string name="developed_by">Developed by,</string>
    <string name="icon_made_by_freepik_from_nwww_flaticon_com">Icon made by Freepik from \n<u>www.flaticon.com</u></string>
    <string name="mit_license_statement">Permission is hereby granted, free of charge, to any person obtaining a copy of this software and associated documentation files (the Software), to deal in the Software without restriction, including without limitation the rights to use, copy, modify, merge, publish, distribute, sublicense, and/or sell copies of the Software, and to permit persons to whom the Software is furnished to do so, subject to the following conditions:\n\n The above copyright notice and this permission notice shall be included in all copies or substantial portions of the Software.\n\n THE SOFTWARE IS PROVIDED AS IS, WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.</string>
    <string name="credits">Credits</string>
    <string name="account_keeper_icon">Account Keeper Icon</string>
    <string name="transaction_icon">Transaction Icon</string>
    <string name="website_icon">Website Icon</string>
    <string name="linkedin_icon">Linkedin Icon</string>
    <string name="github_icon">Github Icon</string>
    <string name="about">About</string>
    <string name="apache_license_v2_0"><u>Apache License v2.0</u></string>
    <string name="google_gson_library">Google GSON Library</string>
    <string name="rate_the_app_on_play_store"><u>Rate the app on play store</u></string>
</resources>
