<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.sonudoo.AccountKeeper.MainActivity">

    <item
        android:id="@+id/backup"
        android:title="@string/backup" />

    <item
        android:id="@+id/restore"
        android:title="@string/restore" />

    <item
        android:id="@+id/settings"
        android:title="@string/title_activity_settings" />

    <item
        android:id="@+id/share"
        android:orderInCategory="100"
        android:title="@string/share_this_app"
        app:showAsAction="never" />

    <item
        android:id="@+id/exit"
        android:orderInCategory="101"
        android:title="@string/exit" />
</menu>
